@@ -2,9 +2,38 @@
 
 Consume return values from arbitrary Java methods in Clojure.
 
-## Usage
+## Installation
 
-FIXME
+[![Clojars Project](https://img.shields.io/clojars/v/com.github.ivarref/hookd.svg)](https://clojars.org/com.github.ivarref/hookd)
+
+## Example usage
+
+Make sure your JVM is started with `-Djdk.attach.allowAttachSelf=true`.
+
+```clojure
+(require '[com.github.ivarref.hookd :as hookd])
+
+; I want to get a copy of the Apache Tomcat JDBC pool:
+(defonce conn-pool (atom nil))
+
+(hookd/install-return-consumer!
+  "org.apache.tomcat.jdbc.pool.ConnectionPool"
+  "::Constructor" ; Special method name to hook into the constructor(s)
+  (partial reset! conn-pool))
+
+; I want to peek at connections returned from the connection pool:
+(hookd/install-return-consumer!
+  "org.apache.tomcat.jdbc.pool.ConnectionPool"
+  "getConnection"
+  (fn [conn] ...))
+```
+
+## How it works
+
+`hookd` uses [java agents](https://www.baeldung.com/java-instrumentation)
+to modify the bytecode of class files. It attaches itself to the running
+JVM. Repeated calls for the same class and method combination
+will not modify the bytecode, only replace the consumer function.
 
 ## License
 
